--- a/src/lesson3/client/components/app/style.pcss
+++ b/src/lesson3/client/components/app/style.pcss
@@ -3,3 +3,11 @@
 .root {
   color: var(--color);
 }
+
+.img {
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  vertical-align: top;
+  background-color: #ccc;
+}
